styles/Index.module.css
.centeredContent {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  height: 90vh;
}

.signatureAnimation {
  position: relative;
  width: 100%;
  max-width: 600px;
  margin: auto;
  margin-bottom: 50px;
}

.signatureVideo {
  width: 100%;
  height: auto;
  margin-bottom: 50px;
}

.socialIconsContainer {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  margin-top: -60px;
}

.socialIcon {
  display: flex;
  align-items: center;
  margin-bottom: 40px;
}

.socialIcon span {
  font-family: "Noto Sans", sans-serif;
  font-size: 22px;
  margin-left: 10px;
}

@media (max-width: 600px) {
  .centeredContent {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    height: 75vh;
  }

  .grid {
    width: 100%;
    flex-direction: column;
  }

  .signatureAnimation {
    max-width: 100%;
    padding-bottom: 50px;
  }

  .socialIconsContainer {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    margin-top: -120px;
    margin-bottom: 90px;
  }

  .socialIcon {
    display: flex;
    align-items: center;
    margin-bottom: 30px;
  }

  .socialIcon span {
    font-family: "Noto Sans", sans-serif;
    font-size: 16px;
    margin-left: 10px;
  }
}

